# triarray

./: LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: ci.yml  pypi.yaml
docs/: Makefile  conf.py  index.rst  make.bat  numbaapi.rst  pythonapi.rst  usage.rst
pwtools/: __init__.py  convert.py  index.py  io.py  math.py  matrix.py  util.py  version.py
tests/: conftest.py  test_convert.py  test_index.py  test_io.py  test_math.py  test_matrix.py
triarray/: __init__.py  index.py  math.py  matrix.py  version.py
