[metadata]
name = triarray
version = attr: triarray.__version__
author = Jared Lumpe
author_email = mjlumpe@gmail.com
url = https://github.com/jlumpe/triarray
project_urls =
    Documentation = http://triarray.readthedocs.io/en/latest/
license = MIT
license_file = LICENSE
description = Tools for working with symmetric matrices in non-redundant format
long_description = file: README.md
long_description_content_type = text/markdown
keywords = numpy array matrix symmetric pairwise distance similarity

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics


[options]

packages = find:

python_requires = >= 3.5

install_requires =
    numpy>=1.11
    numba>=0.30
